[package]
name = "media-renamer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
const_format = "0.2.34"
log = "0.4.25"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"
simplelog = "0.12.2"
toml = "0.8.19"